.provarCaches/00D410000011HE0EAM/objects/DOX__Template_Rule__c.object
<CustomObject>
    <fields>
        <fullName>DOX__Document_Table_Name__c</fullName>
        <label>Document Table Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOX__Extract_Query__c</fullName>
        <label>Extract Query</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DOX__Filter_By__c</fullName>
        <label>Filter By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOX__Group_By_Child__c</fullName>
        <label>Group By Child</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOX__Group_By__c</fullName>
        <label>Group By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOX__Object_Name__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOX__Sheet_Name__c</fullName>
        <label>Sheet Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOX__Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Template</label>
        <referenceTo>DOX__Template__c</referenceTo>
        <relationshipLabel>Template Rules</relationshipLabel>
        <relationshipName>Template_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Template Rule</label>
    <nameField>
        <label>Template Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Template Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>